Error spam in console when opening file from 2.7x #75318

Closed
opened 2020-04-02 21:04:44 +02:00 by Stellarator Tokamak · 8 comments

System Information
Operating system: Windows 10
Graphics card: GeForce GTX 1080

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-01 17:35, hash: a9963669f9, type: Release, uild date: 2020-04-02, 06:54:40
Worked: 2.79b

Many of my files created in 2.7x often spam the console with the following error when opened in 2.8x:

write_customdata error: layer '':15 - can't be written to file

Where '15' can be other numbers. Sometimes dozens of times whenever whatever is throwing this error updates, such as on a frame change, and blender is momentarily unresponsive.

I've found that through process of elimination by deleting data, and I've tracked down a specific example of a mesh data block that triggers the error so you can repro. Deleting the object does not stop the error, but deleting the mesh data immediately does.

I can't stress enough that this normally applies to dozens of objects in a complex file like a rigged character, so tracking down each one is a long process during which blender is extremely laggy.

Repro steps:
Open attatched .blend file, open console, and change the current frame. Since I've only kept one piece of mesh data that causes it, you should see the error once per frame change.

Note: For some reason, switching into and out of edit mode also stops the error, but this isn't always practical in a complex file with hundreds or thousands of objects.

customdata error.blend

**System Information** Operating system: Windows 10 Graphics card: GeForce GTX 1080 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-01 17:35, hash: a9963669f9d2, type: Release, uild date: 2020-04-02, 06:54:40 Worked: 2.79b Many of my files created in 2.7x often spam the console with the following error when opened in 2.8x: ``` write_customdata error: layer '':15 - can't be written to file ``` Where '15' can be other numbers. Sometimes dozens of times whenever whatever is throwing this error updates, such as on a frame change, and blender is momentarily unresponsive. I've found that through process of elimination by deleting data, and I've tracked down a specific example of a mesh data block that triggers the error so you can repro. Deleting the object does not stop the error, but deleting the mesh data immediately does. I can't stress enough that this normally applies to dozens of objects in a complex file like a rigged character, so tracking down each one is a long process during which blender is extremely laggy. Repro steps: Open attatched .blend file, open console, and change the current frame. Since I've only kept one piece of mesh data that causes it, you should see the error once per frame change. Note: For some reason, switching into and out of edit mode also stops the error, but this isn't always practical in a complex file with hundreds or thousands of objects. [customdata error.blend](https://archive.blender.org/developer/F8444357/customdata_error.blend)

Added subscriber: @AdrianPreston

Added subscriber: @AdrianPreston
Member

Added subscriber: @DanielGrauer

Added subscriber: @DanielGrauer

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2020-04-22 16:12:15 +02:00

Error message in itself is valid, issue here is that it is printed out on every undo step storage.

Note that switching to Edit mode, or saving/reloading once, will clear the stale invalid data, so you would not have those errors anymore.

Will silence the error when writing undo memfile.

Error message in itself is valid, issue here is that it is printed out on every undo step storage. Note that switching to Edit mode, or saving/reloading once, will clear the stale invalid data, so you would not have those errors anymore. Will silence the error when writing undo memfile.

This issue was referenced by 878cd0e124

This issue was referenced by 878cd0e1246f173066035e5240ed38016122bba4

The other issue is that the message does not say which object(s) are causing the error, so identifying the offending object in a file with hundreds or thousands of objects is problematic.

The other issue is that the message does not say which object(s) are causing the error, so identifying the offending object in a file with hundreds or thousands of objects is problematic.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75318
No description provided.