Silence annoying error message in writefile on undo step storage.

Fix T75318: Error spam in console when opening file from 2.7x.